--- a/app/src/main/res/layout-land/beer_style_list_item.xml
+++ b/app/src/main/res/layout-land/beer_style_list_item.xml
@@ -2,4 +2,20 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
+    <ImageView
+        android:id="@+id/styleImageView"
+        android:layout_width="130dp"
+        android:layout_height="100dp"
+        android:scaleType="centerCrop"
+        android:background="@drawable/beer"/>
+
+    <TextView
+        android:id="@+id/styleNameTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Beer Style Name"
+        android:textColor="@color/colorPrimary"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
 </RelativeLayout>
