--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -61,7 +61,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="17dp"
-        android:text="See my Saved Styles"
+        android:text="Camera"
         android:id="@+id/bSaved"
         android:textColor="@color/colorTextIcons"
         android:textStyle="normal|bold"
