--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".CameraActivity">
 
+
     <LinearLayout
         android:id="@+id/layout_button"
         android:orientation="horizontal"
@@ -14,20 +15,42 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+
         <Button
+
             android:id="@+id/btnChoose"
             android:text="Choose"
+            android:padding="@dimen/cardview_compat_inset_shadow"
             android:layout_weight="1"
+            android:textAlignment="center"
             android:layout_width="0dp"
+            android:background="@color/colorAccent"
+
             android:layout_height="wrap_content" />
 
         <Button
             android:id="@+id/btnUpload"
             android:text="Upload"
             android:layout_weight="1"
+            android:textAlignment="center"
+            android:background="@color/colorAccent"
+
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
+
     </LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Save_your_style_here"
+        android:fontFamily="cursive"
+        android:id="@+id/tLogo"
+        android:layout_marginTop="146dp"
+        android:textSize="60sp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <ImageView
         android:id="@+id/imgView"
