--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -53,7 +53,7 @@
         android:textStyle="normal|bold"
         android:background="@color/colorAccent"
         android:layout_marginBottom="25dp"
-        android:layout_above="@+id/bSaved"
+        android:layout_above="@+id/camera"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -61,8 +61,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="17dp"
-        android:text="Camera"
-        android:id="@+id/bSaved"
+        android:text="Create New Styles"
+        android:id="@+id/camera"
         android:textColor="@color/colorTextIcons"
         android:textStyle="normal|bold"
         android:background="@color/colorAccent"
